# toffee

./: .gitignore  Cargo.toml
client/: Cargo.toml  package-lock.json  package.json
server/: Cargo.toml
server/migrations/: 20240924172626_Add_todos_table.sql
server/src/: cli.rs  error.rs  init.rs  main.rs  model.rs  server.rs
